// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RadioGroup Controlled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c1 {
  padding: 0;
  border: 0;
  margin: 0;
  width: 100%;
}

.c1 legend {
  padding: 0;
}

.c6 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c6:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c4 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c4:focus + .c5 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c4:checked + .c5 {
  border-color: #00438f;
  background-color: #00438f;
}

.c4:checked + .c5:before {
  display: block;
}

.c4:not(:checked) + .c5 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c2 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <fieldset
      className="c1 "
    >
      <legend
        style={
          Object {
            "marginBottom": "8px",
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "600",
              "lineHeight": "1.71428571",
            }
          }
        >
          Setting Selection
        </span>
      </legend>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-checked={true}
            aria-invalid={false}
            aria-required={false}
            checked={true}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            onChange={[Function]}
            required={false}
            type="radio"
            value="a"
          />
          <div
            checked={true}
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option A
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-checked={false}
            aria-invalid={false}
            aria-required={false}
            checked={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            onChange={[Function]}
            required={false}
            type="radio"
            value="b"
          />
          <div
            checked={false}
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option B
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-checked={false}
            aria-invalid={false}
            aria-required={false}
            checked={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            onChange={[Function]}
            required={false}
            type="radio"
            value="c"
          />
          <div
            checked={false}
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option C
             
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup RadioGroup 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c1 {
  padding: 0;
  border: 0;
  margin: 0;
  width: 100%;
}

.c1 legend {
  padding: 0;
}

.c6 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c6:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c4 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c4:focus + .c5 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c4:checked + .c5 {
  border-color: #00438f;
  background-color: #00438f;
}

.c4:checked + .c5:before {
  display: block;
}

.c4:not(:checked) + .c5 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c2 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <fieldset
      className="c1 "
    >
      <legend
        style={
          Object {
            "marginBottom": "8px",
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "600",
              "lineHeight": "1.71428571",
            }
          }
        >
          Setting Selection
        </span>
      </legend>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="a"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option A
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="b"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option B
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="c"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option C
             
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup RadioGroup with all props 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  margin-left: 8px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 12px;
  line-height: 1.5;
  color: #434d59;
}

.c9 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c5 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c3 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
  font-size: 14px;
  line-height: 1.71428571;
}

.c3 .Link-sc-1lpx3d0-0 {
  font-size: 14px;
}

.c1 {
  padding: 0;
  border: 0;
  margin: 0;
  width: 100%;
}

.c1 legend {
  padding: 0;
}

.c8 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c8:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c6 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c6:focus + .c7 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6:checked + .c7 {
  border-color: #00438f;
  background-color: #00438f;
}

.c6:checked + .c7:before {
  display: block;
}

.c6:not(:checked) + .c7 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c4 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <fieldset
      className="c1 "
    >
      <legend
        style={
          Object {
            "marginBottom": "8px",
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "600",
              "lineHeight": "1.71428571",
            }
          }
        >
          Setting Selection
        </span>
        <span
          className="c2"
          color="darkGrey"
          disabled={false}
          fontSize="12px"
        >
          (Required)
        </span>
      </legend>
      <p
        className="c3"
        color="currentColor"
        disabled={false}
        fontSize="medium"
      >
        Select a setting from the menu below:
      </p>
      <div
        className="c4"
      >
        <label
          className="c5"
          disabled={false}
        >
          <input
            aria-invalid={false}
            aria-required={true}
            className="c6 c4"
            defaultChecked={true}
            disabled={false}
            id={null}
            name="settingSelection"
            required={true}
            type="radio"
            value="a"
          />
          <div
            className="c7 c8"
            disabled={false}
          />
          <span
            className="c9"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option A
             
          </span>
        </label>
      </div>
      <div
        className="c4"
      >
        <label
          className="c5"
          disabled={false}
        >
          <input
            aria-invalid={false}
            aria-required={true}
            className="c6 c4"
            disabled={false}
            id={null}
            name="settingSelection"
            required={true}
            type="radio"
            value="b"
          />
          <div
            className="c7 c8"
            disabled={false}
          />
          <span
            className="c9"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option B
             
          </span>
        </label>
      </div>
      <div
        className="c4"
      >
        <label
          className="c5"
          disabled={false}
        >
          <input
            aria-invalid={false}
            aria-required={true}
            className="c6 c4"
            disabled={false}
            id={null}
            name="settingSelection"
            required={true}
            type="radio"
            value="c"
          />
          <div
            className="c7 c8"
            disabled={false}
          />
          <span
            className="c9"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option C
             
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup Set to disabled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
  opacity: 0.3333;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c1 {
  padding: 0;
  border: 0;
  margin: 0;
  width: 100%;
}

.c1 legend {
  padding: 0;
}

.c6 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c6:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c4 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c4:focus + .c5 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c4:checked + .c5 {
  border-color: #e4e7eb;
  background-color: #e4e7eb;
}

.c4:checked + .c5:before {
  display: block;
}

.c4:not(:checked) + .c5 {
  border-color: #e4e7eb;
  background-color: #f0f2f5;
}

.c2 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <fieldset
      className="c1 "
    >
      <legend
        style={
          Object {
            "marginBottom": "8px",
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "600",
              "lineHeight": "1.71428571",
            }
          }
        >
          Setting Selection
        </span>
      </legend>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={true}
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="c4 c2"
            defaultChecked={true}
            disabled={true}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="a"
          />
          <div
            className="c5 c6"
            disabled={true}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={true}
            fontSize="medium"
          >
             
            Option A
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={true}
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="c4 c2"
            disabled={true}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="b"
          />
          <div
            className="c5 c6"
            disabled={true}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={true}
            fontSize="medium"
          >
             
            Option B
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={true}
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="c4 c2"
            disabled={true}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="c"
          />
          <div
            className="c5 c6"
            disabled={true}
          />
          <span
            className="c7"
            color="currentColor"
            disabled={true}
            fontSize="medium"
          >
             
            Option C
             
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup with error list 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c9 {
  color: #cc1439;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c8 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c14 {
  margin-bottom: 8px;
  color: currentColor;
}

.c14:last-child {
  margin-bottom: 0;
}

.c12 {
  color: currentColor;
  margin: 0;
  padding-left: 18px;
}

.c12 .c13 {
  margin-bottom: 0;
}

.c11 .c7 {
  margin-bottom: 8px;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 0;
  border: 0;
  margin: 0;
  width: 100%;
}

.c1 legend {
  padding: 0;
}

.c6 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c6:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c4 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c4:focus + .c5 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c4:checked + .c5 {
  border-color: #cc1439;
  background-color: #cc1439;
}

.c4:checked + .c5:before {
  display: block;
}

.c4:not(:checked) + .c5 {
  border-color: #cc1439;
  background-color: #ffffff;
}

.c2 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <fieldset
      className="c1 "
    >
      <legend
        style={
          Object {
            "marginBottom": "8px",
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "600",
              "lineHeight": "1.71428571",
            }
          }
        >
          Setting Selection
        </span>
      </legend>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={true}
            aria-required={false}
            className="c4 c2"
            defaultChecked={true}
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="a"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option A
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={true}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="b"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option B
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={true}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="c"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option C
             
          </span>
        </label>
      </div>
      <div
        className="c9"
        color="red"
      >
        <svg
          aria-hidden={true}
          className="c10"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="error"
          mr="x1"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          className="c11"
        >
          <p
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            Please select an option
          </p>
          <ul
            className="c12"
            color="currentColor"
          >
            <li
              className="c13 c14"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              className="c13 c14"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup with error message 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c9 {
  color: #cc1439;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c8 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c11 .c7 {
  margin-bottom: 8px;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 0;
  border: 0;
  margin: 0;
  width: 100%;
}

.c1 legend {
  padding: 0;
}

.c6 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c6:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c4 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c4:focus + .c5 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c4:checked + .c5 {
  border-color: #cc1439;
  background-color: #cc1439;
}

.c4:checked + .c5:before {
  display: block;
}

.c4:not(:checked) + .c5 {
  border-color: #cc1439;
  background-color: #ffffff;
}

.c2 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <fieldset
      className="c1 "
    >
      <legend
        style={
          Object {
            "marginBottom": "8px",
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "600",
              "lineHeight": "1.71428571",
            }
          }
        >
          Setting Selection
        </span>
      </legend>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={true}
            aria-required={false}
            className="c4 c2"
            defaultChecked={true}
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="a"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option A
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={true}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="b"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option B
             
          </span>
        </label>
      </div>
      <div
        className="c2"
      >
        <label
          className="c3"
          disabled={false}
        >
          <input
            aria-invalid={true}
            aria-required={false}
            className="c4 c2"
            disabled={false}
            id={null}
            name="settingSelection"
            required={false}
            type="radio"
            value="c"
          />
          <div
            className="c5 c6"
            disabled={false}
          />
          <span
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
             
            Option C
             
          </span>
        </label>
      </div>
      <div
        className="c9"
        color="red"
      >
        <svg
          aria-hidden={true}
          className="c10"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="error"
          mr="x1"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          className="c11"
        >
          <p
            className="c7 c8"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            Please select an option
          </p>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
